<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.PracticeMakesPercet.MainActivity"
    tools:ignore="MergeRootFrame" >
	<EditText
	    android:id="@+id/nick"
	    android:ems="10"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:hint="@string/choose_username"
	    >
	    
	</EditText>
    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/container3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical" >
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  
                    android:text="@string/red" />

                <RadioButton
                    android:id="@+id/green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green" />
                <RadioButton
                    android:id="@+id/blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/blue" />

                <RadioButton
                    android:id="@+id/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/black" />
            </RadioGroup>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical" >
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/orcs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/orcs" />

                <RadioButton
                    android:id="@+id/humans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/humans" />
                <RadioButton
                    android:id="@+id/undead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/undead" />

                <RadioButton
                    android:id="@+id/elves"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/elves" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/leButon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:text="@string/Salam"
        android:color="@color/red" >
    </Button>

</LinearLayout>